Edited wiki page DSPEmulator through web user interface.

--- a/wiki/DSPEmulator.wiki
+++ b/wiki/DSPEmulator.wiki
@@ -18,21 +18,21 @@ Now since version 0.9ß3 portability has begun to Lazarus and Free Pascal, so th
 The ZIP also includes the ROMS Spectrum 48K, 128K Spectrum, Spectrum +3 and Coleco. You can download most of roms page of the emulator, and you also have the 'Spectrum is Alive!!!' where you have games for the Spectrum.<br><br>
 <b>1.1-. Keys during emulation</b><br>
 <hr>
-General Keys<br>
+General Keys
     'F2' --> Full speed/Normal Speed<br>
     'F3' --> Reset machine<br>
     'F11' --> Changes emulation speed from 25%, 50%, 75% and 100%<br>
-Arcade drivers basic keys:<br>
+Arcade drivers basic keys:
     '1' --> Start player one<br>
     '2' --> Start player two<br>
     '5' --> Insert coin<br>
     '6' --> Inser Coin<br>
 Keys for both players are redefinible, and you can select any joystick for any player<br>
-Spectrum/Amstrad basic keys<br>
+Spectrum/Amstrad basic keys
     'F1' --> Play/Stop tape<br>
     'F4' --> Save snapshot<br>
     'F5' --> Remove Disk<br>
-For Spectrum/Amstrad the no redefinible keys for joystick are<br>
+For Spectrum/Amstrad the no redefinible keys for joystick are
     CUSOR KEYS --> Cursor Up, down, left & right.<br>
     LEFT ALT --> Fire<br>
 In Amstrad CPC for use 'F1' to 'F8' keys you must press right Shift.<br><br>
